--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "react/jsx-filename-extension": 0,
+    "quotes": [2, "double", { "avoidEscape": true }],
+    "react/require-default-props": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "import/extensions": 0,
+    "react/button-has-type": 0,
+    "react/jsx-indent": 0,
+    "indent": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "operator-linebreak": 0,
+    "react/jsx-no-bind": 0,
+    "no-console": 1,
+    "react/prop-types": "warn",
+    "linebreak-style": 0,
+    "object-curly-newline": 0,
+    "no-unused-vars": 0,
+    "no-param-reassign": 0
+  }
 }
